--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/PillControl
 spring.datasource.username=postgres
-spring.datasource.password=123456789
+spring.datasource.password=5432
 
 server.port=8080
