Implementar seguridad con swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.jpa.database=postgresql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/PillControl
+spring.datasource.url=jdbc:postgresql://localhost/PillControlBDS
 spring.datasource.username=postgres
-spring.datasource.password=0714
+spring.datasource.password=123456789
 
 server.port=8080
 
