--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-
 # target/
 # !.mvn/wrapper/maven-wrapper.jar
 #!**/src/main/**/target/
 #!**/src/test/**/target/
-
+*.properties
 ### STS ###
 # .apt_generated
 # .classpath
