--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 #!**/src/main/**/target/
 #!**/src/test/**/target/
 *.properties
+src/main/resources/application.properties
 ### STS ###
 # .apt_generated
 # .classpath
