--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://dpg-d0ij0jqdbo4c738itd7g-a.oregon-postgres.render.com:5432/pillcontroldb_qnqy
+spring.datasource.url=jdbc:postgresql://dpg-d0ij0jqdbo4c738itd7g-a.oregon-postgres.render.com:5432/pillcontroldb_qnqy?sslmode=require
+
 spring.datasource.username=grupo3
 spring.datasource.password=uPmZmETaON6xS16MF9aCGOauZdJ2zlWr
 
